Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 
 /* Custom Properties - big screen */
 
-@media (min-width: 800px) {
+@media (min-width: 820px) {
   :root {
     --fs-h1: 4.5rem;
     --fs-h2: 3.75rem;
@@ -341,7 +341,7 @@ font-size: var(--fs-h3);
   background: var(--clr-accent);
   padding: .25em 1em;
   font-family: var(--ff-secondary);
-  margin-bottom: 1em;
+  margin-block: 1em;
 }
 
 .section__subtitle--work {
@@ -438,7 +438,7 @@ header {
   top: 1em;
   z-index: 500;
 }
-@media (min-width: 800px) {
+@media (min-width: 820px) {
   .nav-toggle {
     top: 1.4em
   }
@@ -595,7 +595,7 @@ header {
 }
 
 .section__title--about {
-  margin-block: 1em;
+  /* margin-block: 1em; */
 }
 
 .about-me__img {
@@ -611,7 +611,7 @@ header {
   max-width: 300px;
   margin: 0 auto;
 }
-@media (min-width: 800px) {
+@media (min-width: 820px) {
   .about-me {
     text-align: left;
     max-width: 1200px;
@@ -672,13 +672,15 @@ header {
   display: grid;
   gap: 2em;
   grid-template-columns: repeat(auto-fit, minmax(90%, 1fr));
-  max-width: 1120px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
 .portfolio__item {
   overflow: hidden;
   border-radius: 16px;
+  /* max-width: 80%; */
+  /* margin: 0 auto; */
 }
 
 .portfolio__img {
@@ -700,7 +702,12 @@ header {
   filter: none;
   /* mix-blend-mode: lighten; */
 }
-
+@media (max-width: 820px) {
+  .portfolio__item {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+}
 
 /* Footer */
 .footer {
@@ -802,6 +809,7 @@ header {
   .portfolio {
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   }
+
 }
 
 
